Bug 1049241 - [MADAI][Multimedia] Cannot play some RTSP link due to error in MP4A-LATM assembler. r=sworkman, a=bajaj